--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
 <div id='pagecontainer'>
 <div id='header'>
 		<div id='title'>Learning Hearts</div>
+		<img id='logo' src='./resources/images/logo.png'>
 		<div id='menu'>
 				<ul>
 					<li>Home</li>
