--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -51,22 +51,20 @@
 				<h1>Our Team &#x2764;</h1>
 
 				<div class="AboutUs_blurb">
-					<p>
-						Learning Hearts is an implementation of machine learning 
-						artificial intelligence that aims to analyze the data records
-						of previously affected patients and to provide informed analysis 
-						and prediction of their heart health based on their data inputs. 
-					</p>
+					<p>Learning Hearts is an implementation of machine learning
+						artificial intelligence that aims to analyze the data records of
+						previously affected patients and to provide informed analysis and
+						prediction of their heart health based on their data inputs.</p>
 
 					<p>We love our rich and engaged community and our contributors,
 						who are truly leaders in their field.</p>
 				</div>
 
 				<div class="AboutUs_links">
-					
+
 					<a href="contact.html" title="Contact us">Contact us</a><br />
 
-					
+
 				</div>
 			</div>
 		</section>
@@ -79,26 +77,26 @@
 
 					<li class="AboutUs_teamMember">
 						<figure class="AboutUs_teamMemberPhoto">
-							<img
-								src="resources/krijan.jpg"
-								alt="Krijan Niroula" style="width:400px;height:300px;">
+							<img src="resources/krijan.jpg" alt="Krijan Niroula"
+								style="width: 400px; height: 300px;">
 							<figcaption class="AboutUs_teamMemberInfo">
-							<a href="https://www.linkedin.com/in/krijan-niroula/" target="_blank">
+								<a href="https://www.linkedin.com/in/krijan-niroula/"
+									target="_blank">
 									<h3 class="team-member_name">Krijan Niroula</h3>
-									<p class="team-member_title">Founder</p> 
+									<p class="team-member_title">Founder</p>
 								</a>
 							</figcaption>
 						</figure>
 					</li>
 					<li class="AboutUs_teamMember">
 						<figure class="AboutUs_teamMemberPhoto">
-							<img
-								src="resources/pranish.jpg"
-								alt="Pranish Rajbhandari" style="width:400px;height:300px;">
+							<img src="resources/pranish.jpg" alt="Pranish Rajbhandari"
+								style="width: 400px; height: 300px;">
 							<figcaption class="AboutUs_teamMemberInfo">
-								<a href="https://www.linkedin.com/in/rajbhandaripranish/" target="_blank">
+								<a href="https://www.linkedin.com/in/rajbhandaripranish/"
+									target="_blank">
 									<h3 class="team-member_name">Pranish Rajbhandari</h3>
-									<p class="team-member_title">Founder</p> 
+									<p class="team-member_title">Founder</p>
 								</a>
 							</figcaption>
 						</figure>
