--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -26,6 +26,7 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+
 	<div id='pagecontainer'>
 		<div class='container'>
 			<div id='header' class='row-md-12 row-sm-12 row-lg-12'>
@@ -45,9 +46,10 @@
 			</nav>
 		</div>
 	</div>
+	
 	<div class="container">
 		<div class="wrap-contact100">
-			
+			<div id="success">Thank you for your response!!</div>
 			<form class="contact100-form validate-form" method="POST">
 				<span class="contact100-form-title"> Send Us A Message </span>
 
@@ -80,10 +82,12 @@
 				</div>
 			</form>
 
+
 			<div class="contact100-more flex-col-c-m"
 				style="background-image: url('resources/bg-01.jpg');"></div>
 		</div>
 	</div>
+
 	<script src="js/main.js"></script>
 
 </body>
